--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = palet
 version = attr: palet.version.VERSION
-description = Pallet Extraction and Management Tool for Game Assets Experimentation
+description = Palette Extraction and Management Tool for Game Assets Experimentation
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = Abhishta Gatya
@@ -27,9 +27,13 @@ install_requires =
   pillow==10.2.0
 
 
-[options.packages.find]xw
+[options.packages.find]
 exclude =
   tests
   tests.*
   docs
   docs.*
+  out
+  out.*
+  data
+  data.*
