--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
-name = palet
-version = attr: palet.version.VERSION
+name = paleta
+version = attr: paleta.version.VERSION
 description = Palette Extraction and Management Tool for Game Assets Experimentation
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = Abhishta Gatya
 author_email = abhishtagatya@yahoo.com
-url = https://github.com/abhishtagatya/palet
+url = https://github.com/abhishtagatya/paleta
 license_files = LICENSE
 classifiers =
   Programming Language :: Python :: 3
@@ -15,8 +15,8 @@ classifiers =
   Topic :: Artistic Software
   Topic :: Software Development :: Libraries :: Python Modules
 project_urls =
-  Homepage = https://github.com/abhishtagatya/palet
-  Change Log = https://github.com/abhishtagatya/palet/CHANGELOG.md
+  Homepage = https://github.com/abhishtagatya/paleta
+  Change Log = https://github.com/abhishtagatya/paleta/CHANGELOG.md
 
 [options]
 packages = find:
