--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ zip_safe = True
 include_package_data = True
 install_requires =
   pillow==10.2.0
+  requests~=2.31.0
 
 
 [options.packages.find]
